All notable changes to this project will be documented in this file. This change log follows the conventions of http://keepachangelog.com/[keepachangelog.com].

== Unreleased (dev)

== 0.9.216 (2023-05-03)
// {{{
=== Fixed
* https://github.com/liquidz/build.edn/issues/27[#27]: Fixed release workflow to update README correctly.
// }}}

== 0.9.213 (2023-05-03)
// {{{
=== Changed
* Bumped tools.build to 0.9.4.
* Bumped rewrite-clj to 1.1.47.
* Bumped malli to 0.11.0.
* Bumped deps-deploy to 0.2.1.
* Bumped kaocha to 1.82.1306.

=== Fixed
* https://github.com/liquidz/build.edn/issues/27[#27]: Fixed release workflow to update README correctly.
// }}}

== 0.9.203 (2023-03-04)
// {{{
=== Changed
* Bumped kaocha to 1.80.1274.
* Changed to use tools.build on the Maven repository.
* Changed release workflow to use https://github.com/ncipollo/release-action[ncipollo/release-action].
* Updated release workflow to deploy to clojars.
// }}}

== 0.9.194 (2023-02-13)
// {{{
=== Changed
* Bumped tools.build to 0.9.3.
* Bumped rewrite-clj to 1.1.46.
* Bumped malli to 0.10.1.
* Bumped pogonos to 0.2.1.
* Bumped kaocha to 1.77.1236.
// }}}

== 0.9.188 (2022-11-11)
// {{{
=== Added
* Added `java-compile` function to compile Java sources.
* Added `execute` function.
** This function allows you to execute two or more functions at once.
// }}}

== 0.8.174 (2022-11-09)
// {{{
=== Added
* Added functions for operating semantic versions
** `bump-major-version`
** `bump-minor-version`
** `bump-patch-version`
** `add-snapshot`
** `remove-snapshot`

=== Changed
* Bumped malli to 0.9.2.
* Bumped tools.build to 0.8.4.
* Bumped kaocha to 1.71.1119.
// }}}

== 0.8.162 (2022-10-15)
// {{{
=== Added
* Added `keep-indent?` option for `documents` setting.
** See link:./doc/format/documents.adoc[doc/format/documents.adoc] for more details.

=== Changed
* Bumped kaocha to 1.70.1086.
* Bumped data.xml to 0.2.0-alpha8.